2009-11-08  David Levin  <levin@chromium.org>

        Reviewed by NOBODY (chromium build fix).
        
        Hopefully, the last build fix.

        Create better separation in DateMath about the JSC
        and non-JSC portions. Also, only expose the non-JSC
        version in the exports.

        * JavaScriptCore.exp:
        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:
        * wtf/DateMath.cpp:
        (WTF::parseDateFromNullTerminatedCharacters):
        (JSC::getUTCOffset):
        (JSC::gregorianDateTimeToMS):
        (JSC::msToGregorianDateTime):
        (JSC::parseDateFromNullTerminatedCharacters):
        * wtf/DateMath.h:
        (JSC::gmtoffset):

2009-11-08  David Levin  <levin@chromium.org>

        Reviewed by NOBODY (chromium build fix).

        For the change in DateMath.

        * config.h:
        * wtf/DateMath.cpp:

2009-11-06  Geoffrey Garen  <ggaren@apple.com>

        Windows build fix: export some symbols.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2009-11-06  Geoffrey Garen  <ggaren@apple.com>

        Build fix: updated export file.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCore.def:

2009-11-06  Geoffrey Garen  <ggaren@apple.com>

        Build fix: added some #includes.

        * wtf/CurrentTime.h:
        * wtf/DateMath.h:

2009-11-06  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Oliver Hunt.
        
        https://bugs.webkit.org/show_bug.cgi?id=31197
        Implemented a timezone cache not based on Mac OS X's notify_check API.
        
        If the VM calculates the local timezone offset from UTC, it caches the
        result until the end of the current VM invocation. (We don't want to cache
        forever, because the user's timezone may change over time.)
        
        This removes notify_* overhead on Mac, and, more significantly, removes
        OS time and date call overhead on non-Mac platforms.
